--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Compiled class file
 *.class
+target
+target/
+.settings
 
 # Log file
 *.log
@@ -13,7 +16,6 @@
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
 *.zip
 *.tar.gz
@@ -21,4 +23,14 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-replay_pid*
+
+#idea files
+*.iml
+.idea
+.idea/
+
+#eclipse
+.classpath
+.project
+
+*.bak
